--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,54 +1,67 @@
-body {
-    background-color: lightskyblue;
+.jumbotron {
+    background-color: white;
   }
   
-  h1 {
+h1 {
     color: darkviolet;
     text-align: center;
     border-bottom: 6px solid pink;
     margin-bottom: 40px;
     font-size: 70px;
   }
-
-  
- h3 {
+ 
+.lead {
     font-family: verdana;
     font-size: 20px;
   }
 
-  p {
+  .my-4 {
       font-family: 'Times New Roman', Times, serif;
       font-size: 17px;
-      color: white;
+      color: black;
   }
 
 .randNum {
     margin-top: 40px;
+    text-align: center;
 }
 
   #number-bank {
       font-size: 60px;
       padding: 10px;
-      color: white;
+      color: black;
+      text-align: center;
   }
 
   #total-score {
       font-size: 60px;
       padding: 10px;
-      color: white;
+      color: black;
+      text-align: center;
   }
+
+ .title {
+  text-align: center;
+ } 
 
 #loss-count {
   color: darkviolet;
+  text-align: center;
+  margin-bottom: 40px;
 }
 
 #win-count {
   color: darkviolet;
+  text-align: center;
 }
 
-  img {
-      height: 250px;
-      width: auto;
-      margin: 20px;
-      float: left;
-  }
+.img {
+  position: relative;
+  float: left;
+  width:  250px;
+  height: 250px;
+  background-position: 50% 50%;
+  background-repeat:   no-repeat;
+  background-size:     cover;
+  margin-right: 20px;
+}
